--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-task-tracker",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "https://clothin-line.onrender.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
